[package]
name = "req"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
regex = "1.9.5"
tokio-native-tls = "0.3"
native-tls = "0.2"
async-std = "1.12.0"
url = "2.4.1"
rand = "0.8.5"
ua_generator = "0.3.5"
futures = "0.3.28"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }